tests/bad/compare_1.ppl
data List a = Nil | Cons a (List a);

Cons (\x. ()) Nil == Nil;